# polyglot-monorepo

./: .bazelignore  .bazeliskrc  .bazelrc  .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  BUILD.bazel  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MODULE.bazel  README.md  SECURITY.md  WORKSPACE.bzlmod  example.BUILD.bazel.go  example.BUILD.bazel.java  example.BUILD.bazel.py  example.BUILD.bazel.ts  package.json  requirements_lock.txt
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
