module(
    name = "example_monorepo",
    version = "0.1.0",
    repo_name = "example-monorepo",
)

bazel_dep(name = "bazel_skylib", version = "1.7.1")

# ─────────────────────────────
# Go (rules_go + gazelle)
# ─────────────────────────────
bazel_dep(name = "rules_go", version = "0.53.0")
bazel_dep(name = "gazelle", version = "0.36.0")

# Configure rules_go toolchain
go = use_extension("@rules_go//go:extensions.bzl", "go")
go.toolchain(version = "1.23.2")  # match your desired Go version
use_repo(go, "go_sdk")

# Gazelle extension (for automatic BUILD generation)
gazelle_ext = use_extension("@gazelle//:extensions.bzl", "gazelle")
use_repo(gazelle_ext, "gazelle")

# ─────────────────────────────
# Python (rules_python + pip)
# ─────────────────────────────
bazel_dep(name = "rules_python", version = "0.40.0")

python = use_extension("@rules_python//python/extensions.bzl", "python")
python.toolchain(python_version = "3.12")
use_repo(python, "python_versions")

pip = use_extension("@rules_python//python/extensions.bzl", "pip")
pip.parse(
    name = "pip_deps",
    requirements_lock = "//:requirements_lock.txt",
)
use_repo(pip, "pip_deps")

# ─────────────────────────────
# Node.js / JS / TS
# ─────────────────────────────
bazel_dep(name = "rules_js", version = "1.40.1")

node = use_extension("@rules_js//js:extensions.bzl", "node")
node.toolchain(node_version = "20.11.1")
use_repo(node, "node")

# Optional: package manager integration (npm, yarn, pnpm)
npm = use_extension("@rules_js//npm:extensions.bzl", "npm")
npm.import(
    name = "npm",
    lockfile = "//:package-lock.json",   # or yarn.lock / pnpm-lock.yaml
)
use_repo(npm, "npm")

# ─────────────────────────────
# Java / JVM
# ─────────────────────────────
bazel_dep(name = "rules_java", version = "6.2.0")
bazel_dep(name = "rules_jvm_external", version = "6.0")

maven = use_extension("@rules_jvm_external//:extensions.bzl", "maven")
maven.install(
    artifacts = [
        "junit:junit:4.13.2",
    ],
    repositories = [
        "https://repo1.maven.org/maven2",
    ],
)
use_repo(maven, "maven")

# ─────────────────────────────
# Tooling
# ─────────────────────────────
# Buildifier / Buildozer for BUILD file linting
bazel_dep(name = "buildtools", version = "7.1.2")
